Sun Feb 23 15:58:11 2003  Oystein Johansen <oystein@gnubg.org>

	* html.c (CommandExportPositionGammOnLine): Copy the file
	directly to the windows clipboard.
	
Mon Feb 17 18:54:11 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c: - fix so next marked finds errors on last play of game
	
Mon Feb  3 12:11:36 2003  Gary Wong  <gtw@gnu.org>

	* gtkboard.c (board_set): More fixes for dice positions -- set
	position independently of size when moving dice off board.

Thu Jan 30 18:52:34 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (InvalidateStoredMoves): new function.
	* play.c (CommandRoll): invalidate stored moves otherwise the
	shown hint may be wrong if the player goes back to a previous
	move and roll new dice.
	(reported by Billie Patterson)

Thu Jan 30 17:19:11 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_pointer): use board from current matchstate
	instead of current board show for click-bearoff-tray-to-bearoff.
	(reported by Holger Bochnig)

Thu Jan 30 17:13:30 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): make sure dice positions are calculated
	even though nSize < 0.
	(reported by Holger Bochnig)

Wed Jan 29 20:24:32 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (getResignation): resign single in money game with
	Jacoby rule and centered cube.
	(reported by Ric Gerace)

Wed Jan 29 20:02:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c, render.c: Show pseudo-cube on resignations.

Wed Jan 29 17:10:27 2003  Joern Thyssen  <jth@gnubg.org>

	* boards.xml: add Ian Shaw's new Iberian design :-)

Wed Jan 29 16:47:14 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in: some magic for wintendo systems.

Tue Jan 28 11:04:16 2003  Gary Wong  <gtw@gnu.org>

	* gtkrolls.c (GTKShowRolls): Change the spin button to a GTKHScale,
	to work around various signal and focus problems.
	(RollsTree): Handle fInterrupt.

Tue Jan 28 06:39:22 GMT   Jim Segrave <jes@jes-2.demon.nl>
